Fix image stretch on About us page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1022,8 +1022,8 @@ margin-top: 700px; */
 }
 
 .contact-us-page .image-box {
-    width: 100%;
-    /* height: 150px; */
+    width: 150px;
+    height: 150px;
     /* margin: 0 auto; */
     align-self: flex-end;
 }
@@ -1038,8 +1038,8 @@ margin-top: 700px; */
 }
 
 .about-product-page .image-box {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    /* height: 300px; */
     margin: 0 auto;
 }
 
